@@ -19,9 +19,8 @@ import sphinx
 from sphinx import addnodes
 from sphinx.locale import _
 from sphinx.pycode import ModuleAnalyzer
-from sphinx.util import get_full_modname, logging
+from sphinx.util import get_full_modname, logging, status_iterator
 from sphinx.util.nodes import make_refnode
-from sphinx.util.console import blue  # type: ignore
 
 if False:
     # For type annotation
@@ -147,9 +146,10 @@ def collect_pages(app):
 #    app.builder.info(' (%d module code pages)' %
 #                     len(env._viewcode_modules), nonl=1)
 
-    for modname, entry in app.status_iterator(
-            iteritems(env._viewcode_modules), 'highlighting module code... ',  # type:ignore
-            blue, len(env._viewcode_modules), lambda x: x[0]):  # type:ignore
+    for modname, entry in status_iterator(iteritems(env._viewcode_modules),  # type: ignore
+                                          'highlighting module code... ', "blue",
+                                          len(env._viewcode_modules),  # type: ignore
+                                          app.verbosity, lambda x: x[0]):
         if not entry:
             continue
         code, tags, used, refname = entry
