@@ -8,7 +8,14 @@
     :copyright: Copyright 2007-2016 by the Sphinx team, see AUTHORS.
     :license: BSD, see LICENSE for details.
 """
-from sphinx.util import encode_uri, split_docinfo
+
+import pytest
+from mock import patch
+
+from sphinx.util import display_chunk, encode_uri, split_docinfo, status_iterator
+from sphinx.util import logging
+
+from util import with_app, strip_escseq
 
 
 def test_encode_uri():
@@ -46,3 +53,44 @@ def test_splitdocinfo():
     docinfo, content = split_docinfo(source)
     assert docinfo == ":multiline: one\n\ttwo\n\tthree\n"
     assert content == '\nHello world.\n'
+
+
+def test_display_chunk():
+    assert display_chunk('hello') == 'hello'
+    assert display_chunk(['hello']) == 'hello'
+    assert display_chunk(['hello', 'sphinx', 'world']) == 'hello .. world'
+    assert display_chunk(('hello',)) == 'hello'
+    assert display_chunk(('hello', 'sphinx', 'world')) == 'hello .. world'
+
+
+@pytest.mark.sphinx('dummy')
+@patch('sphinx.util.console._tw', 40)  # terminal width = 40
+def test_status_iterator(app, status, warning):
+    logging.setup(app, status, warning)
+
+    # test for old_status_iterator
+    status.truncate(0)
+    yields = list(status_iterator(['hello', 'sphinx', 'world'], 'testing ... '))
+    output = strip_escseq(status.getvalue())
+    assert 'testing ... hello sphinx world \n' in output
+    assert yields == ['hello', 'sphinx', 'world']
+
+    # test for status_iterator (verbosity=0)
+    status.truncate(0)
+    yields = list(status_iterator(['hello', 'sphinx', 'world'], 'testing ... ',
+                                  length=3, verbosity=0))
+    output = strip_escseq(status.getvalue())
+    assert 'testing ... [ 33%] hello                \r' in output
+    assert 'testing ... [ 66%] sphinx               \r' in output
+    assert 'testing ... [100%] world                \r\n' in output
+    assert yields == ['hello', 'sphinx', 'world']
+
+    # test for status_iterator (verbosity=1)
+    status.truncate(0)
+    yields = list(status_iterator(['hello', 'sphinx', 'world'], 'testing ... ',
+                                  length=3, verbosity=1))
+    output = strip_escseq(status.getvalue())
+    assert 'testing ... [ 33%] hello\n' in output
+    assert 'testing ... [ 66%] sphinx\n' in output
+    assert 'testing ... [100%] world\n\n' in output
+    assert yields == ['hello', 'sphinx', 'world']
